# PC-scanner

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  build-sidecar.ps1  main.py  requirements.txt
backend/scanner/: cache.py  engine.py  history_store.py  models.py  scan_enumeration.py  scan_worker.py  services.py  services_engine.py  settings_store.py  signature_check.py  startup_items.py  tier1.py  tier2.py  virustotal.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/deepcheck/: DeepCheckPanel.tsx  FlaggedContextMenu.tsx  VtResultBadge.tsx
src/components/layout/: AppShell.tsx  BackendLoadingOverlay.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  switch.tsx  table.tsx  tooltip.tsx
src/hooks/: useDeepCheckAction.ts  useRelativeTime.ts
src/lib/: api.ts  deepcheck.ts  shell.ts  utils.ts
src/pages/: HistoryPage.tsx  OverallPage.tsx  ResultsPage.tsx  ScanPage.tsx  ServicesPage.tsx  SettingsPage.tsx  StartupPage.tsx
