[package]
name = "maat"
version = "0.1.0"
description = "Maat - Personal PC File Scanner"
authors = ["Maat"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
